fix retweet overlay alignment and bug generating retweet overlay caused by the generateTweetBody refactoring

--- a/bar.css
+++ b/bar.css
@@ -90,8 +90,8 @@ a {
 
 a.avatar-retweet {
 	position:absolute;
-	left:14px;
-	top:14px;
+	left:13px;
+	top:13px;
 }
 
 img.avatar-retweet {
